--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 Vincent Carbonaro's Personal Page!
 
+<br><br>
+
 <a href="vinstagram.herokuapp.com">My Final Project</a>
 
-<a href="">Snake!</a>
+<br><br>
+
+
+<a href="vincentcarbonaro.github.io/snake">Snake!</a>
