--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-Vincent Carbonaro's Personal Page!
+<title>Vincent Carbonaro</title>
+
+Vincent Carbonaro
 
 <br><br>
 
-<a href="vinstagram.herokuapp.com">My Final Project</a>
+<a href="http://vinstagram.herokuapp.com">My Final Project</a>
 
 <br><br>
 
-
-<a href="vincentcarbonaro.github.io/snake">Snake!</a>
+<a href="http://vincentcarbonaro.github.io/snake">Snake!</a>
