Capital S in Snake

--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ Vincent Carbonaro
 
 <br><br>
 
-<a href="http://vincentcarbonaro.github.io/snake">Snake!</a>
+<a href="http://vincentcarbonaro.github.io/Snake">Snake!</a>
