--- a/index.html
+++ b/index.html
@@ -1,11 +1,125 @@
-<title>Vincent Carbonaro</title>
+<!DOCTYPE html>
+<html>
 
-Vincent Carbonaro
+<head>
+  <link href="css/0-header-footer-reset.css" rel="stylesheet" type="text/css">
+  <link href="css/1-home.css" rel="stylesheet" type="text/css">
+  <link href="css/2-resume.css" rel="stylesheet" type="text/css">
+  <link href="css/3-portfolio.css" rel="stylesheet" type="text/css">
+  <link href="css/4-contact.css" rel="stylesheet" type="text/css">
+  <link href="vendor/hover.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <script src="vendor/jquery-2.1.3.min.js"></script>
+  <script src="site.js"></script>
+</head>
+<body>
+  <title>Vincent Carbonaro</title>
 
-<br><br>
+  <div id="wrapper">
 
-<a href="http://vinstagram.herokuapp.com">My Final Project</a>
+    <header id="header">
+      <nav class="group">
+        <h1 class="logo">Vincent Carbonaro</h1>
+        <ul>
+          <li class="home active">Home</li>
+          <li class="resume">Resume</li>
+          <li class="portfolio">Portfolio</li>
+          <li class="contact">Contact</li>
+        </ul>
+      </nav>
+    </header>
 
-<br><br>
+    <main id="content">
 
-<a href="http://vincentcarbonaro.github.io/Snake">Snake!</a>
+      <section id="home" class="section group">
+
+        <section class="banner-background">
+          <div class="banner">
+            Home
+          </div>
+        </section>
+
+        <section class="bottom group">
+          <section class="pic">
+          </section>
+
+          <section class="bio">
+            Hello and welcome to my website! <br><br>
+            My name is Vincent Carbonaro and I am a web developer from New York City.
+            I have a BS in Computer Science from the College of Staten Island and am
+            also a recent graduate of App Academy, an intensive full stack web development
+            course.  While there I programmed in Ruby, Ruby on Rails, Javascript, Backbone.js,
+            CSS3, and HTML5.  I am currently using these skills to pursue a career in web
+            development.
+          </section>
+        </section>
+
+      </section>
+
+      <section id="resume" class="section group inactive">
+
+        <section class="banner-background">
+          <div class="banner">
+            Resume
+          </div>
+        </section>
+
+        <section class="bottom">
+        </section>
+
+      </section>
+
+      <section id="portfolio" class="section group inactive">
+
+        <section class="banner-background">
+          <div class="banner">
+            Portfolio
+          </div>
+        </section>
+
+        <section class="bottom group">
+          <ul>
+            <li class="hvr-grow"><a href="http://vinstagram.herokuapp.com">Vinstagram</a></li>
+            <li class="hvr-grow"><a href="http://vincentcarbonaro.github.io/Snake">Snake</a></li>
+            <li class="hvr-grow"><a href="#">Ruby Chess</a></li>
+          </ul>
+        </section>
+
+      </section>
+
+      <section id="contact" class="section group inactive">
+
+        <section class="banner-background">
+          <div class="banner">
+            Contact
+          </div>
+        </section>
+
+        <section class="bottom">
+          Phone: &nbsp(718) - 757 - 8762 <br><br>
+          LinkedIn: <a href="www.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
+          E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
+
+        </section>
+
+      </section>
+
+    </main>
+
+    <footer id="footer" class="footer">
+      <nav class="group">
+        <div class="logo">Vincent Carbonaro 2015</div>
+        <ul>
+          <li class="home active">Home</li>
+          <li class="resume">Resume</li>
+          <li class="portfolio">Portfolio</li>
+          <li class="contact">Contact</li>
+        </ul>
+      </nav>
+    </footer>
+
+  </div>
+
+</body>
+
+</html>
