Added github to Contact

--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
 
           <section class="bio">
             Hello and welcome to my website! <br><br>
-            My name is Vincent Carbonaro and I am a web developer from New York City.
-            I have a BS in Computer Science from the College of Staten Island and am
-            also a recent graduate of App Academy, an intensive full stack web development
-            course.  While there I programmed in Ruby, Ruby on Rails, Javascript, Backbone.js,
-            CSS3, and HTML5.  I am currently using these skills to pursue a career in web
-            development.
+            My name is Vincent Carbonaro and I am a web developer from New York
+            City.  I have a BS in Computer Science from the College of Staten
+            Island and am also a recent graduate of App Academy, an intensive
+            full stack web development course.  While there I programmed in Ruby,
+            Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  I am
+            currently using these skills to pursue a career in web development.
+            <br><br>
+            When I'm not coding I'm usually exercising, playing football,
+            or playing guitar.
           </section>
         </section>
 
@@ -97,7 +100,8 @@
 
         <section class="bottom">
           Phone: &nbsp(718) - 757 - 8762 <br><br>
-          LinkedIn: <a href="www.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
+          Github: <a href="https://www.github.com/vincentcarbonaro">VincentCarbonaro</a><br><br>
+          LinkedIn: <a href="https://www.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
           E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
 
         </section>
