--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
         <section class="bottom group">
           <section class="pic">
+            <img src="images/vc.jpeg" alt="" />
           </section>
 
           <section class="bio">
@@ -101,7 +102,7 @@
         <section class="bottom">
           Phone: &nbsp(718) - 757 - 8762 <br><br>
           Github: <a href="https://www.github.com/vincentcarbonaro">VincentCarbonaro</a><br><br>
-          LinkedIn: <a href="https://www.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
+          LinkedIn: <a href="https://imawww.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
           E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
 
         </section>
