--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="css/4-contact.css" rel="stylesheet" type="text/css">
   <link href="vendor/hover.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
   <script src="vendor/jquery-2.1.3.min.js"></script>
   <script src="site.js"></script>
 </head>
