Added Skills png's

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
           </section>
         </section>
 
+        <section class="skills group">
+          <label>SKILLS</label>
+          <ul class="skills-list">
+            <li><img height="100" width="100" src="images/ruby.png"/></li>
+            <li><img height="100" width="100" src="images/rails.png"/></li>
+            <li><img height="100" width="100" src="images/html.png"/></li>
+            <li><img height="100" width="100" src="images/css.png"/></li>
+            <li><img height="100" width="100" src="images/javascript.png"/></li>
+            <li><img height="100" width="100" src="images/jquery.png"/></li>
+            <li><img height="100" width="100" src="images/postgres.png"/></li>
+            <li><img height="100" width="100" src="images/backbone.png"/></li>
+          </ul>
+        </section>
+
       </section>
 
       <section id="resume" class="section group inactive">
