--- a/index.html
+++ b/index.html
@@ -98,9 +98,20 @@
 
         <section class="bottom group">
           <ul>
-            <li class="hvr-grow"><a href="http://vinstagram.herokuapp.com">Vinstagram</a></li>
-            <li class="hvr-grow"><a href="http://vincentcarbonaro.github.io/Snake">Snake</a></li>
-            <li class="hvr-grow"><a href="#">Ruby Chess</a></li>
+            <li class="hvr-grow"><br><br>
+              <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
+              github<br><br>
+              live
+            </li>
+            <li class="hvr-grow"><br><br>
+              <a href="http://vincentcarbonaro.github.io/Snake">Snake</a><br><br>
+              github<br><br>
+              live
+              </li>
+              <li class="hvr-grow"><br><br>
+                <a href="#">Ruby Chess</a><br><br>
+                github<br><br>
+            </li>
           </ul>
         </section>
 
