Added to Portolio Page

--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
 
         <section class="bottom group">
           <ul>
-            <li class="hvr-grow"><br><br>
+            <li class="hvr-grow vinstagram"><br>
               <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
-              github<br><br>
-              live
+              <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
+              <a href="http://vinstagram.herokuapp.com">live</a>
             </li>
-            <li class="hvr-grow"><br><br>
+            <li class="hvr-grow snake"><br>
               <a href="http://vincentcarbonaro.github.io/Snake">Snake</a><br><br>
-              github<br><br>
-              live
+              <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
+              <a href="http://vincentcarbonaro.github.io/Snake/">live</a>
               </li>
-              <li class="hvr-grow"><br><br>
+              <li class="hvr-grow chess"><br><br>
                 <a href="#">Ruby Chess</a><br><br>
-                github<br><br>
+                <a href="https://github.com/vincentcarbonaro/Ruby-Chess">github</a><br><br>
             </li>
           </ul>
         </section>
