Issues with Git

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </section>
 
           <section class="bio">
-            Hello and welcome to my website! <br><br>
+            Hello, and welcome to my website! <br><br>
             My name is Vincent Carbonaro and I am a web developer from New York
             City.  I have a BS in Computer Science from the College of Staten
             Island and am also a recent graduate of App Academy, an intensive
@@ -126,7 +126,6 @@
         </section>
 
         <section class="bottom">
-          Phone: &nbsp(718) - 757 - 8762 <br><br>
           Github: <a href="https://www.github.com/vincentcarbonaro">VincentCarbonaro</a><br><br>
           LinkedIn: <a href="https://imawww.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
           E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
