Added Vinstagram font to portfolio page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/0-header-footer-reset.css" rel="stylesheet" type="text/css">
   <link href="css/1-home.css" rel="stylesheet" type="text/css">
   <link href="css/2-resume.css" rel="stylesheet" type="text/css">
+  <link href="css/font.scss" rel="stylesheet/less" type="text/css">
   <link href="css/3-portfolio.css" rel="stylesheet" type="text/css">
   <link href="css/4-contact.css" rel="stylesheet" type="text/css">
   <link href="vendor/hover.css" rel="stylesheet" type="text/css">
@@ -99,7 +100,9 @@
         <section class="bottom group">
           <ul>
             <li class="hvr-grow vinstagram"><br>
-              <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
+              <label>
+                <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
+              </label>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
               <a href="http://vinstagram.herokuapp.com">live</a>
             </li>
