--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
                 <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
               </label>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
-              <a href="http://vinstagram.herokuapp.com">live</a>
+              <a href="http://vinstagram.herokuapp.com">live!</a>
             </li>
             <li class="hvr-grow snake"><br>
               <a href="http://vincentcarbonaro.github.io/Snake">Snake</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
-              <a href="http://vincentcarbonaro.github.io/Snake/">live</a>
+              <a href="http://vincentcarbonaro.github.io/Snake/">live!</a>
               </li>
               <li class="hvr-grow chess"><br><br>
-                <a href="#">Ruby Chess</a><br><br>
-                <a href="https://github.com/vincentcarbonaro/Ruby-Chess">github</a><br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a><br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a><br><br>
             </li>
           </ul>
         </section>
