--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         </section>
 
         <section class="bottom">
+          <br>
+          <a href="VincentCarbonaro.pdf"><u>Download - VincentCarbonaro.pdf</u></a>
+          <br><br>
+          <embed src="VincentCarbonaro.pdf" width=830px height=1066px>
         </section>
 
       </section>
