Fixed hyperlink to use custom urls, and updated readme

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
           <ul>
             <li class="hvr-grow vinstagram"><br>
               <label>
-                <a href="http://vinstagram.herokuapp.com">Vinstagram</a><br><br>
+                <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
               </label>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
-              <a href="http://vinstagram.herokuapp.com">live!</a>
+              <a href="http://www.vinstagram.us">live!</a>
             </li>
             <li class="hvr-grow snake"><br>
-              <a href="http://vincentcarbonaro.github.io/Snake">Snake</a><br><br>
+              <a href="http://www.vincentcarbonaro.us/Snake">Snake</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
-              <a href="http://vincentcarbonaro.github.io/Snake/">live!</a>
+              <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
               </li>
               <li class="hvr-grow chess"><br><br>
                 <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a><br><br>
