Added insta img to portfolio

--- a/index.html
+++ b/index.html
@@ -103,8 +103,12 @@
 
         <section class="bottom group">
           <ul>
-            <li class="hvr-grow vinstagram"><br>
+
+            <li class="hvr-grow vinstagram">
+              <img id="insta-img" src="images/instapic.jpg" alt="" />
+
               <label>
+                <br>
                 <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
               </label>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
@@ -115,7 +119,7 @@
               <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
               <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
               </li>
-              <li class="hvr-grow chess"><br><br>
+              <li class="hvr-grow active-record"><br><br>
                 <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a><br><br>
                 <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a><br><br>
             </li>
