Images for all portfolio projects

--- a/index.html
+++ b/index.html
@@ -105,23 +105,25 @@
           <ul>
 
             <li class="hvr-grow vinstagram">
-              <img id="insta-img" src="images/instapic.jpg" alt="" />
-
-              <label>
+              <img id="insta-img" src="images/instapic.jpg"/>
                 <br>
                 <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
-              </label>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
               <a href="http://www.vinstagram.us">live!</a>
             </li>
-            <li class="hvr-grow snake"><br>
+            <li class="hvr-grow snake">
+              <img id="insta-img" src="images/snake.png"/>
+              <br>
               <a href="http://www.vincentcarbonaro.us/Snake">Snake</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
               <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
               </li>
-              <li class="hvr-grow active-record"><br><br>
-                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a><br><br>
-                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a><br><br>
+              <li class="hvr-grow active-record">
+                <img id="insta-img" src="images/ar.png"/>
+                <br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a>
+                <br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a>
             </li>
           </ul>
         </section>
