--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <ul>
 
             <li class="hvr-grow vinstagram">
-              <img id="insta-img" src="images/instapic.jpg"/>
+              <img id="insta-img" src="images/instapic.png"/>
                 <br>
                 <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
