Added City Spade Coding Challenge to Portfolio

--- a/index.html
+++ b/index.html
@@ -117,14 +117,24 @@
               <a href="http://www.vincentcarbonaro.us/Snake">Snake</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
               <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
-              </li>
-              <li class="hvr-grow active-record">
-                <img id="insta-img" src="images/ar.png"/>
-                <br><br>
-                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a>
-                <br><br>
-                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a>
             </li>
+
+            <li class="hvr-grow active-record">
+              <img id="insta-img" src="images/ar.png"/>
+              <br><br>
+              <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a>
+              <br><br>
+              <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a>
+            </li>
+
+            <li class="hvr-grow cityspade">
+              <img id="insta-img" src="images/gmaps.png"/>
+              <br>
+              <a href="https://cityspade.herokuapp.com">Coding Challenge</a><br><br>
+              <a href="https://github.com/vincentcarbonaro/City-Spade-Coding-Challenge">github</a><br><br>
+              <a href="https://cityspade.herokuapp.com">live!</a>
+            </li>
+
           </ul>
         </section>
 
