--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link href="vendor/jquery-ui.min.css" rel="stylesheet" type="text/css">
   <link href="css/0-header-footer-reset.css" rel="stylesheet" type="text/css">
   <link href="css/1-home.css" rel="stylesheet" type="text/css">
   <link href="css/2-resume.css" rel="stylesheet" type="text/css">
@@ -12,6 +13,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
   <script src="vendor/jquery-2.1.3.min.js"></script>
+  <script src="vendor/jquery-ui.js"> </script>
   <script src="site.js"></script>
 </head>
 <body>
@@ -104,14 +106,14 @@
         <section class="bottom group">
           <ul>
 
-            <li class="hvr-grow vinstagram">
+            <li class="hvr-grow vinstagram" title="">
               <img id="insta-img" src="images/instapic.png"/>
                 <br>
                 <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
               <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
               <a href="http://www.vinstagram.us">live!</a>
             </li>
-            <li class="hvr-grow snake">
+            <li class="hvr-grow snake" title="">
               <img id="insta-img" src="images/snake.png"/>
               <br>
               <a href="http://www.vincentcarbonaro.us/Snake">Snake</a><br><br>
@@ -119,7 +121,7 @@
               <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
             </li>
 
-            <li class="hvr-grow active-record">
+            <li class="hvr-grow active-record" title="">
               <img id="insta-img" src="images/ar.png"/>
               <br><br>
               <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a>
@@ -127,7 +129,7 @@
               <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a>
             </li>
 
-            <li class="hvr-grow cityspade">
+            <li class="hvr-grow cityspade" title="">
               <img id="insta-img" src="images/gmaps.png"/>
               <br>
               <a href="https://cityspade.herokuapp.com">Coding Challenge</a><br><br>
