--- a/index.html
+++ b/index.html
@@ -1,180 +1,187 @@
-<!DOCTYPE html>
 <html>
+  <head>
+    <title>Vincent Carbonaro</title>
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/0-header-footer-banner.css" rel="stylesheet" type="text/css">
+    <link href="css/1-home.css" rel="stylesheet" type="text/css">
+    <link href="css/2-resume.css" rel="stylesheet" type="text/css">
+    <link href="css/3-portfolio.css" rel="stylesheet" type="text/css">
+    <link href="css/4-contact.css" rel="stylesheet" type="text/css">
+    <link href="vendor/hover-min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/jquery-ui.min.css" rel="stylesheet" type="text/css">
+    <script src="vendor/jquery-2.1.3.min.js"></script>
+    <script src="vendor/jquery-ui.min.js"></script>
+    <script src="main.js"></script>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
 
-<head>
-  <link href="vendor/jquery-ui.min.css" rel="stylesheet" type="text/css">
-  <link href="css/0-header-footer-reset.css" rel="stylesheet" type="text/css">
-  <link href="css/1-home.css" rel="stylesheet" type="text/css">
-  <link href="css/2-resume.css" rel="stylesheet" type="text/css">
-  <link href="css/font.scss" rel="stylesheet/less" type="text/css">
-  <link href="css/3-portfolio.css" rel="stylesheet" type="text/css">
-  <link href="css/4-contact.css" rel="stylesheet" type="text/css">
-  <link href="vendor/hover.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
-  <script src="vendor/jquery-2.1.3.min.js"></script>
-  <script src="vendor/jquery-ui.js"> </script>
-  <script src="site.js"></script>
-  <title>Vincent Carbonaro</title>
-</head>
-<body>
+    <div id="wrapper">
 
-  <div id="wrapper">
+      <header class="group">
+        <nav class="group">
+          <h1 class="logo">Vincent Carbonaro</h1>
+          <ul class="group">
+            <li class="home active">Home</li>
+            <li class="resume">Resume</li>
+            <li class="portfolio">Portfolio</li>
+            <li class="contact">Contact</li>
+          </ul>
+        </nav>
 
-    <header id="header">
-      <nav class="group">
-        <h1 class="logo">Vincent Carbonaro</h1>
-        <ul>
-          <li class="home active">Home</li>
-          <li class="resume">Resume</li>
-          <li class="portfolio">Portfolio</li>
-          <li class="contact">Contact</li>
-        </ul>
-      </nav>
-    </header>
+      </header>
 
-    <main id="content">
+      <div id="content">
 
-      <section id="home" class="section group">
+        <section id="home" class="section">
 
-        <section class="banner-background">
-          <div class="banner">
-            Home
+          <div class="banner-background">
+            <div class="banner">
+              <h1>Home</h1>
+            </div>
           </div>
-        </section>
 
-        <section class="bottom group">
-          <section class="pic">
-            <img src="images/vc.jpeg" alt="" />
+          <section class="bottom group">
+
+            <section class="pic">
+              <img src="images/vc.jpeg"/>
+            </section>
+
+            <section class="bio">
+              Hello, and welcome to my website! <br><br>
+              My name is Vincent Carbonaro and I am a web developer from New York
+              City.  I have a BS in Computer Science from the College of Staten
+              Island and am also a graduate of App Academy, an intensive
+              full stack web development course.  While there I programmed in Ruby,
+              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  I am
+              currently using these skills to pursue a career in web development.
+              <br><br>
+              When I'm not coding I'm usually exercising, playing football,
+              or playing guitar.
+            </section>
+
+            <section class="skills group">
+              <h1>SKILLS</h1>
+              <ul class="skills-list group">
+                <li><img height="100" width="100" src="images/ruby.png"/></li>
+                <li><img height="100" width="100" src="images/rails.png"/></li>
+                <li><img height="100" width="100" src="images/html.png"/></li>
+                <li><img height="100" width="100" src="images/css.png"/></li>
+                <li><img height="100" width="100" src="images/javascript.png"/></li>
+                <li><img height="100" width="100" src="images/jquery.png"/></li>
+                <li><img height="100" width="100" src="images/postgres.png"/></li>
+                <li><img height="100" width="100" src="images/backbone.png"/></li>
+              </ul>
+            </section>
+
           </section>
 
-          <section class="bio">
-            Hello, and welcome to my website! <br><br>
-            My name is Vincent Carbonaro and I am a web developer from New York
-            City.  I have a BS in Computer Science from the College of Staten
-            Island and am also a recent graduate of App Academy, an intensive
-            full stack web development course.  While there I programmed in Ruby,
-            Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  I am
-            currently using these skills to pursue a career in web development.
+        </section>
+
+        <section id="resume" class="section inactive">
+
+          <div class="banner-background">
+            <div class="banner">
+              <h1>Resume</h1>
+            </div>
+          </div>
+
+          <section class="bottom">
+            <br>
+            <a href="VincentCarbonaro.pdf" target="_blank"><u>Click Here to Download as .pdf</u></a>
             <br><br>
-            When I'm not coding I'm usually exercising, playing football,
-            or playing guitar.
+
+            <img src="VincentCarbonaro.png"/>
+
           </section>
+
         </section>
 
-        <section class="skills group">
-          <label>SKILLS</label>
-          <ul class="skills-list">
-            <li><img height="100" width="100" src="images/ruby.png"/></li>
-            <li><img height="100" width="100" src="images/rails.png"/></li>
-            <li><img height="100" width="100" src="images/html.png"/></li>
-            <li><img height="100" width="100" src="images/css.png"/></li>
-            <li><img height="100" width="100" src="images/javascript.png"/></li>
-            <li><img height="100" width="100" src="images/jquery.png"/></li>
-            <li><img height="100" width="100" src="images/postgres.png"/></li>
-            <li><img height="100" width="100" src="images/backbone.png"/></li>
-          </ul>
-        </section>
+        <section id="portfolio" class="section inactive">
 
-      </section>
-
-      <section id="resume" class="section group inactive">
-
-        <section class="banner-background">
-          <div class="banner">
-            Resume
+          <div class="banner-background">
+            <div class="banner">
+              <h1>Portfolio</h1>
+            </div>
           </div>
-        </section>
 
-        <section class="bottom">
-          <br>
-          <a href="VincentCarbonaro.pdf"><u>Download - VincentCarbonaro.pdf</u></a>
-          <br><br>
-          <embed src="VincentCarbonaro.pdf" width=830px height=1066px>
-        </section>
+          <section class="bottom">
 
-      </section>
+            <h2><a href="https://github.com/vincentcarbonaro/vincentcarbonaro.github.io" class="hvr-grow" target="_blank"><u>Github for this site</u></a></h2>
 
-      <section id="portfolio" class="section group inactive">
+            <ul class="group">
 
-        <section class="banner-background">
-          <div class="banner">
-            Portfolio
-          </div>
-        </section>
-
-        <section class="bottom group">
-          <ul>
-
-            <li class="hvr-grow vinstagram" title="">
-              <img id="insta-img" src="images/instapic.png"/>
+              <li class="hvr-grow vinstagram" title="">
+                <img src="images/instapic.png"/>
                 <br>
-                <a href="http://www.vinstagram.us">Vinstagram</a><br><br>
-              <a href="https://github.com/vincentcarbonaro/Vinstagram">github</a><br><br>
-              <a href="http://www.vinstagram.us">live!</a>
-            </li>
-            <li class="hvr-grow snake" title="">
-              <img id="insta-img" src="images/snake.png"/>
-              <br>
-              <a href="http://www.vincentcarbonaro.us/Snake">Snake</a><br><br>
-              <a href="https://github.com/vincentcarbonaro/Snake">github</a><br><br>
-              <a href="http://www.vincentcarbonaro.us/Snake/">live!</a>
-            </li>
+                <a href="http://www.vinstagram.us" target="_blank">Vinstagram</a><br><br>
+                <a href="https://github.com/vincentcarbonaro/Vinstagram" target="_blank">github</a><br><br>
+                <a href="http://www.vinstagram.us" target="_blank">live!</a>
+              </li>
 
-            <li class="hvr-grow active-record" title="">
-              <img id="insta-img" src="images/ar.png"/>
-              <br><br>
-              <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">Active Record Lite</a>
-              <br><br>
-              <a href="https://github.com/vincentcarbonaro/Active-Record-Lite">github</a>
-            </li>
+              <li class="hvr-grow snake" title="">
+                <img src="images/snake.png"/>
+                <br>
+                <a href="http://www.vincentcarbonaro.us/Snake" target="_blank">Snake</a><br><br>
+                <a href="https://github.com/vincentcarbonaro/Snake" target="_blank">github</a><br><br>
+                <a href="http://www.vincentcarbonaro.us/Snake/" target="_blank">live!</a>
+              </li>
 
-            <li class="hvr-grow cityspade" title="">
-              <img id="insta-img" src="images/gmaps.png"/>
-              <br>
-              <a href="https://cityspade.herokuapp.com">Coding Challenge</a><br><br>
-              <a href="https://github.com/vincentcarbonaro/City-Spade-Coding-Challenge">github</a><br><br>
-              <a href="https://cityspade.herokuapp.com">live!</a>
-            </li>
+              <li class="hvr-grow ar" title="">
+                <img src="images/ar.png"/>
+                <br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite" target="_blank">Active Record Lite</a>
+                <br><br>
+                <a href="https://github.com/vincentcarbonaro/Active-Record-Lite" target="_blank">github</a>
+              </li>
 
-          </ul>
+              <li class="hvr-grow cityspade" title="">
+                <img src="images/gmaps.png"/>
+                <br>
+                <a href="https://cityspade.herokuapp.com" target="_blank">Coding Challenge</a><br><br>
+                <a href="https://github.com/vincentcarbonaro/City-Spade-Coding-Challenge" target="_blank">github</a><br><br>
+                <a href="https://cityspade.herokuapp.com" target="_blank">live!</a>
+              </li>
+
+            </ul>
+          </section>
+
         </section>
 
-      </section>
+        <section id="contact" class="section inactive">
 
-      <section id="contact" class="section group inactive">
-
-        <section class="banner-background">
-          <div class="banner">
-            Contact
+          <div class="banner-background">
+            <div class="banner">
+              <h1>Contact</h1>
+            </div>
           </div>
+
+          <section class="bottom">
+            Github: <a href="https://www.github.com/vincentcarbonaro" target="_blank">VincentCarbonaro</a><br><br>
+            LinkedIn: <a href="https://imawww.linkedin.com/in/vincentcarbonaro" target="_blank">VincentCarbonaro</a> <br><br>
+            E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
+          </section>
+
+          </section>
+
         </section>
 
-        <section class="bottom">
-          Github: <a href="https://www.github.com/vincentcarbonaro">VincentCarbonaro</a><br><br>
-          LinkedIn: <a href="https://imawww.linkedin.com/in/vincentcarbonaro">VincentCarbonaro</a> <br><br>
-          E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
+      </div>
 
-        </section>
+      <footer>
+        <nav>
+          <h1>Vincent Carbonaro 2015</h1>
+          <ul class="group">
+            <li class="home active">Home</li>
+            <li class="resume">Resume</li>
+            <li class="portfolio">Portfolio</li>
+            <li class="contact">Contact</li>
+          </ul>
+        </nav>
+      </footer>
 
-      </section>
+    </div>
 
-    </main>
-
-    <footer id="footer" class="footer">
-      <nav class="group">
-        <div class="logo">Vincent Carbonaro 2015</div>
-        <ul>
-          <li class="home active">Home</li>
-          <li class="resume">Resume</li>
-          <li class="portfolio">Portfolio</li>
-          <li class="contact">Contact</li>
-        </ul>
-      </nav>
-    </footer>
-
-  </div>
-
-</body>
-
+  </body>
 </html>
