Added spacing in contact

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
           </div>
 
           <section class="bottom">
-            Github: <a href="https://www.github.com/vincentcarbonaro" target="_blank">VincentCarbonaro</a><br><br>
-            LinkedIn: <a href="https://imawww.linkedin.com/in/vincentcarbonaro" target="_blank">VincentCarbonaro</a> <br><br>
-            E-mail: <a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
+            Github: &nbsp<a href="https://www.github.com/vincentcarbonaro" target="_blank">VincentCarbonaro</a><br><br>
+            LinkedIn: &nbsp<a href="https://imawww.linkedin.com/in/vincentcarbonaro" target="_blank">VincentCarbonaro</a> <br><br>
+            E-mail: &nbsp<a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
           </section>
 
           </section>
