Fixed broken LINKEDIN URL

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
           <section class="bottom">
             Github: &nbsp<a href="https://www.github.com/vincentcarbonaro" target="_blank">VincentCarbonaro</a><br><br>
-            LinkedIn: &nbsp<a href="https://imawww.linkedin.com/in/vincentcarbonaro" target="_blank">VincentCarbonaro</a> <br><br>
+            LinkedIn: &nbsp<a href="https://www.linkedin.com/in/vincentcarbonaro" target="_blank">VincentCarbonaro</a> <br><br>
             E-mail: &nbsp<a href="mailto:VincentCarbonaro2@gmail.com">VincentCarbonaro2@gmail.com</a><br>
           </section>
 
