--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <section class="bottom group">
 
             <section class="pic">
-              <img src="images/vc2.png"/>
+              <img src="images/vc2.jpg"/>
             </section>
 
             <section class="bio">
