--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
               Hello, and welcome to my website! <br><br>
               My name is Vincent Carbonaro and I am a web developer from New York
               City.  I have a BS in Computer Science from the College of Staten
-              Island and am also a graduate of App Academy, an intensive
-              full stack web development course.  While there I programmed in Ruby,
-              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  I am
-              currently using these skills to pursue a career in web development.
-              <br><br>
-              When I'm not coding I'm usually exercising, playing football,
-              or playing guitar.
+              Island and I am also a graduate of App Academy, an intensive full
+              stack web development course.  While there I programmed in Ruby,
+              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  Since
+              August 2015 I have been using my skills as a contracted web
+              developer at Google focusing on TDD bug fixes in Ruby.
             </section>
 
             <section class="skills group">
