--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               City.  I have a BS in Computer Science from the College of Staten
               Island and I am also a graduate of App Academy, an intensive full
               stack web development course.  While there I programmed in Ruby,
-              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  Since
+              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  As of
               August 2015 I have been using my skills as a contracted web
               developer at Google focusing on TDD bug fixes in Ruby.
             </section>
