--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               stack web development course.  While there I programmed in Ruby,
               Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  As of
               August 2015 I have been using my skills as a contracted web
-              developer at Google focusing on TDD bug fixes in Ruby.
+              developer at Google.
             </section>
 
             <section class="skills group">
