--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
               City.  I have a BS in Computer Science from the College of Staten
               Island and I am also a graduate of App Academy, an intensive full
               stack web development course.  While there I programmed in Ruby,
-              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  As of
-              August 2015 I have been using my skills as a contracted web
-              developer at Google.
+              Ruby on Rails, Javascript, Backbone.js, CSS3, and HTML5.  From
+              August of 2015 to September of 2016 I worked as a contracted web
+              developer at Google.  Since then I have become a salaried Google
+              employee and am continuing to use and develop my skills there.
             </section>
 
             <section class="skills group">
